# PEA_Projekt_1

./: CMakeLists.txt  README.md  main.cpp
data/: DataReader.cpp  DataReader.h  TimeTests.cpp  TimeTests.h
graphs/: DirectedGraph.cpp  DirectedGraph.h  Graph.cpp  Graph.h  UndirectedGraph.cpp  UndirectedGraph.h
representations/: GraphRep.cpp  GraphRep.h
structures/: PriorityQueue.cpp  PriorityQueue.h  Set.cpp  Set.h
